--- a/.github/workflows/build_esp32s3.yml
+++ b/.github/workflows/build_esp32s3.yml
@@ -3,6 +3,7 @@ name: ESP32 S3
 
 # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#onschedule
 on:
+  workflow_dispatch:
   push:
   pull_request:
     paths-ignore:
